# unname

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/unname/: __init__.py  anonymize.py  cli.py  get_packages.py  logger.py  packages.py  prepare_outdir.py
