[project]
name = "unname"
version = "0.4.0"
description = "A simple CLI for anonymizing Python codebases for blind review."
readme = "README.md"
authors = [
    { name = "RyotaUshio", email = "ushio@ms.k.u-tokyo.ac.jp" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "tomlkit>=0.13.3",
]

[project.urls]
Repository = "https://github.com/RyotaUshio/unname.git"

[project.scripts]
unname = "unname.cli:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
